ENYO-4608: Compact Header properly marquees titleBelow and subTitleBelow retain their position in the absence of the other Updated both types of header to use Layout, removed unnecessary CSS from Header Header components no longer wrap unexpectedly Removed, now unnecessary, debugging style code
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/packages/moonstone/Panels/Header.less
+++ b/packages/moonstone/Panels/Header.less
@@ -32,7 +32,6 @@
 	.subTitleBelow {
 		.moon-sub-header-text();
 		margin: 0;
-		.margin-start-end(0, @moon-spotlight-outset);
 		line-height: 45px;
 	}
 
@@ -40,47 +39,23 @@
 		.moon-header-sub-title-below();
 	}
 
-	.headerCell {
-		max-width: 100%;
-		min-width: 0;
-	}
-
 	.headerComponents {
 		.remove-margin-on-edge-children();
+		.margin-start-end(@moon-spotlight-outset, 0);
 
-		max-width: 100%;
-		flex-wrap: nowrap;
-		display: flex;
-		align-items: flex-end;
-	}
-
-	&.compact,
-	.headerRow {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
+		white-space: nowrap;
 	}
 
 	// Standard Header
 	&.standard {
 		height: @moon-header-height-medium;
+		padding-bottom: 12px;
 
 		.title {
 			line-height: @moon-medium-header-line-height;
 
 			.enyo-locale-non-latin & {
 				line-height: @moon-non-latin-medium-header-line-height;
-			}
-		}
-
-		.headerRow {
-			position: absolute;
-			width: 100%;
-			height: 75px;
-			bottom: 12px;
-
-			.headerCell {
-				flex-grow: 1;
 			}
 		}
 
@@ -93,13 +68,11 @@
 	// Compact Header
 	&.compact {
 		height: @moon-header-height-small;
-		align-items: stretch;
 
 		.title {
-			line-height: @moon-small-header-line-height;
 			font-size: @moon-small-header-font-size;
-			margin-top: 30px;
-			display: inline-block;
+			margin-bottom: 3px;
+			display: inline;
 
 			.enyo-locale-non-latin & {
 				line-height: @moon-non-latin-small-header-line-height;
@@ -108,43 +81,6 @@
 
 		.titleBelow {
 			display: inline;
-			margin-left: (2 * @moon-spotlight-outset);
-		}
-
-		.headerComponents {
-			margin: @moon-spotlight-outset 0;
-		}
-	}
-
-	&:global(.debug) {
-		@alpha: 10%;
-
-		border: cornflowerblue dashed 1px;
-		background-color: fade(cornflowerblue, @alpha);
-
-		.title {
-			border: lime dashed 1px;
-			background-color: fade(lime, @alpha);
-		}
-
-		.headerCell {
-			border: orange dashed 1px;
-			background-color: fade(orange, @alpha);
-		}
-
-		.titleBelow {
-			border: green dashed 1px;
-			background-color: fade(green, @alpha);
-		}
-
-		.subTitleBelow {
-			border: teal dashed 1px;
-			background-color: fade(teal, @alpha);
-		}
-
-		.headerComponents {
-			border: cyan dashed 1px;
-			background-color: fade(cyan, @alpha);
 		}
 	}
 
